--- a/npc/Makefile
+++ b/npc/Makefile
@@ -5,4 +5,6 @@ sim:
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
 	@echo "Write this Makefile by your self."
 
+make sim:
+	
 include ../Makefile
