--- a/npc/Makefile
+++ b/npc/Makefile
@@ -4,7 +4,6 @@ all:
 sim:
 	$(call git_commit, "sim RTL") # DO NOT REMOVE THIS LINE!!!
 	@echo "Write this Makefile by your self."
-
-make sim:
 	
 include ../Makefile
+include ../nvboard/example/Makefile
